<resources>
    <string name="app_name">Wrench</string>

    <string name="applications">Applications</string>

    <string name="no_configurations_found">No configurations found.</string>
    <string name="no_applications_found">No applications found</string>
    <string name="restart_application">Restart application</string>
    <string name="not_installed">Not installed</string>
    <string name="application_not_installed">Application not installed</string>
    <string name="delete_application">Delete application</string>
    <string name="go_to_application_settings">Go to application settings</string>
    <string name="filter_configurations">Filter configurations</string>
    <string name="revert">revert</string>
    <string name="select_scope">Select scope</string>
    <string name="application_icon">Application icon</string>
    <string name="wrench_permission_label">Access Wrench</string>
    <string name="wrench_permission_description">Access to request configuration from Wrench</string>
    <string name="help">Help</string>
    <string name="oss">Open source</string>
    <string name="wrench_preferences">Wrench Preferences:</string>
    <string name="wrench_livedata">Wrench LiveData:</string>

    <string name="help_dependency_title">App build.gradle</string>
    <string name="wrench_preferences_dependency">dependencies {\n\timplementation \'com.izettle.wrench:wrench-prefs:0.3\'\n}</string>
    <string name="wrench_livedata_dependency">dependencies {\n\timplementation \'com.izettle.wrench:wrench-livedata:0.3\'\n}</string>
    <string name="help_implementation_title">Implementation</string>
    <string name="wrench_preferences_implementation">WrenchPreferences wrenchPreferences = new WrenchPreferences(getApplicationContext());\nboolean myBetaFeature = wrenchPreferences.getBoolean(&quot;Unreleased feature&quot;, false)</string>
    <string name="wrench_livedata_implementation">fun getBooleanConfiguration(): LiveData&lt;Boolean&gt; {\n\treturn WrenchLiveData.create(application, &quot;Unreleased feature&quot;, false)\n}</string>

</resources>
