<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter_configurations"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/filter_configurations"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_restart_application"
        android:icon="@drawable/ic_restart_white_24dp"
        android:title="@string/restart_application"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_application_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/go_to_application_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_application"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_application"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_scope"
        android:icon="@drawable/ic_change_scope_black_24dp"
        android:title="@string/select_scope"
        app:showAsAction="never" />


</menu>