<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.izettle.wrench.oss.list.OssFragment">

        <android.support.v7.widget.CardView
            android:id="@+id/wrench_prefs_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/wrench_prefs_card_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wrench_preferences"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wrench_prefs_card_textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/wrench_preferences_dependency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrench_prefs_card_textView" />

                <TextView
                    android:id="@+id/wrench_prefs_card_textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help_implementation_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrench_prefs_card_textView3" />

                <TextView
                    android:id="@+id/wrench_prefs_card_textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/wrench_preferences_implementation"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrench_prefs_card_textView4" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/wrench_livedata_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wrench_prefs_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/wrench_livedata_card_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wrench_livedata"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wrench_livedata_card_textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/wrench_livedata_dependency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrench_livedata_card_textView" />

                <TextView
                    android:id="@+id/wrench_livedata_card_textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help_implementation_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrench_livedata_card_textView3" />

                <TextView
                    android:id="@+id/wrench_livedata_card_textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/wrench_livedata_implementation"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wrench_livedata_card_textView4" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
