<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/action_applications">

    <fragment
        android:id="@+id/action_applications"
        android:name="com.izettle.wrench.applicationlist.ApplicationsFragment"
        android:label="@string/applications">
        <action
            android:id="@+id/action_applicationsFragment_to_configurationsFragment"
            app:destination="@id/configurationsFragment" />
    </fragment>
    <fragment
        android:id="@+id/configurationsFragment"
        android:name="com.izettle.wrench.configurationlist.ConfigurationsFragment"
        android:label="ConfigurationsFragment">
        <argument
            android:name="applicationId"
            app:type="integer" />
        <action
            android:id="@+id/action_configurationsFragment_to_scopeFragment"
            app:destination="@id/scopeFragment" />
        <action
            android:id="@+id/action_configurationsFragment_to_booleanValueFragment"
            app:destination="@id/booleanValueFragment" />
        <action
            android:id="@+id/action_configurationsFragment_to_integerValueFragment"
            app:destination="@id/integerValueFragment" />
        <action
            android:id="@+id/action_configurationsFragment_to_stringValueFragment"
            app:destination="@id/stringValueFragment" />
        <action
            android:id="@+id/action_configurationsFragment_to_enumValueFragment"
            app:destination="@id/enumValueFragment" />
    </fragment>
    <fragment
        android:id="@+id/enumValueFragment"
        android:name="com.izettle.wrench.dialogs.enumvalue.EnumValueFragment"
        android:label="EnumValueFragment">
        <argument
            android:name="configurationId"
            app:type="integer" />
        <argument
            android:name="scopeId"
            app:type="integer" />
    </fragment>
    <fragment
        android:id="@+id/stringValueFragment"
        android:name="com.izettle.wrench.dialogs.stringvalue.StringValueFragment"
        android:label="StringValueFragment">
        <argument
            android:name="configurationId"
            app:type="integer" />
        <argument
            android:name="scopeId"
            app:type="integer" />
    </fragment>
    <fragment
        android:id="@+id/integerValueFragment"
        android:name="com.izettle.wrench.dialogs.integervalue.IntegerValueFragment"
        android:label="IntegerValueFragment">
        <argument
            android:name="configurationId"
            app:type="integer" />
        <argument
            android:name="scopeId"
            app:type="integer" />
    </fragment>
    <fragment
        android:id="@+id/booleanValueFragment"
        android:name="com.izettle.wrench.dialogs.booleanvalue.BooleanValueFragment"
        android:label="BooleanValueFragment">
        <argument
            android:name="configurationId"
            app:type="integer" />
        <argument
            android:name="scopeId"
            app:type="integer" />
    </fragment>
    <fragment
        android:id="@+id/scopeFragment"
        android:name="com.izettle.wrench.dialogs.scope.ScopeFragment"
        android:label="ScopeFragment">
        <argument
            android:name="configurationId"
            app:type="integer" />
        <argument
            android:name="scopeId"
            app:type="integer" />
    </fragment>
    <fragment
        android:id="@+id/action_oss"
        android:name="com.izettle.wrench.oss.list.OssFragment"
        android:label="@string/oss"
        tools:layout="@layout/fragment_oss" />

    <fragment
        android:id="@+id/action_oss_detail"
        android:name="com.izettle.wrench.oss.detail.OssDetailFragment"
        android:label="@string/oss"
        tools:layout="@layout/fragment_oss_detail">

        <argument
            android:name="dependency"
            app:type="string" />
        <argument
            android:name="skip"
            app:type="integer" />
        <argument
            android:name="length"
            app:type="integer" />
    </fragment>

    <fragment
        android:id="@+id/action_help"
        android:name="com.izettle.wrench.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
</navigation>